<resources>
    <string name="app_name">AndroidAssignment</string>

    <!--Sign In-->
    <string name="login">로그인</string>
    <string name="sopt">SOPT</string>
    <string name="mdb1217">"mdb1217 "</string>
    <string name="welcome_to">"Welcome to "</string>
    <string name="profile">profile</string>
    <string name="auto_login">자동로그인</string>
    <string name="is_empty">빈 칸이 있습니다!</string>
    <string name="welcome">"환영합니다! "</string>
    <string name="sir">님</string>
    <string name="auto_login_done">자동로그인 되었습니다</string>
    <string name="not_match_id_password">아이디나 비밀번호가 맞지 않습니다!</string>

    <!--Sign Up-->
    <string name="sign_up"><u>회원가입</u></string>
    <string name="user_name">User name</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="sign_up_no_line">회원가입</string>
    <string name="sign_up_done">회원가입 완료!</string>
    <string name="sign_up_fail">회원가입 실패!</string>
    <string name="sign_up_logo">Sign Up</string>

    <!--Profile-->
    <string name="name">이름 : 문다빈</string>
    <string name="repository_add">레포지토리 추가</string>
    <string name="repository_name">레포 이름</string>
    <string name="repository_explanation">레포 설명</string>
    <string name="repository_specification">레포 종류</string>
    <string name="study">study</string>
    <string name="project">project</string>
    <string name="information">info</string>
    <string name="git_id">mdb1217</string>
    <string name="welcome_to_my_profile">Welcome to my profile!</string>
    <string name="introduce">🌱초보 개발자 문다빈🌱</string>
    <string name="star">star</string>
    <string name="contribute">contribute</string>
    <string name="profile_korea">프로필</string>
    <string name="profile_add">"프로필 추가"</string>
    <string name="repo_list">repository list</string>
    <string name="plz_one_clicked">종류를 선택해주세요</string>
    <string name="detailed_profile">detailed profile</string>
    <string name="add"><u>추가하기</u></string>
    <string name="restore">저장하기</string>
    <string name="cancel">취소하기</string>
    <string name="delete">삭제하기</string>
    <string name="title_english">Title</string>
    <string name="is_really_delete">정말 삭제하시겠습니까?</string>
    <string name="is_really_delete_detail">삭제하게 되면 복구가 불가능합니다. 삭제하시겠습니까?</string>

    <!--tools-->
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="language">언어</string>
    <string name="date">21년 4월 27일</string>
    <string name="one">1</string>
    <string name="birth">1998-12-17</string>
    <string name="phone">010-5144-4190</string>


    <!--contribute-->
    <string name="follower">Follower List</string>

    <!--Star-->
    <string name="favorites">즐겨찾기</string>
    <string name="starred_repo">Starred Repo!</string>

    <!--Contribute-->
    <string name="grass">잔디밭</string>

    <!--Setting-->
    <string name="setting">"환경 설정"</string>
    <string name="logout">로그아웃</string>
    <string name="contact">"contact with me?"</string>
</resources>