<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="repoData" type="org.sopt.data.local.entity.RepoData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/selector_star"
                app:layout_constraintBottom_toBottomOf="@+id/tv_repo_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_repo_name" />

            <TextView
                android:id="@+id/tv_repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@{repoData.name}"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ib_star"
                tools:text="@string/title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_repo_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/ocean_green"
                android:textSize="16sp"
                android:text="@{repoData.explanation}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/line"
                app:layout_constraintTop_toBottomOf="@+id/line"
                tools:text="@string/content" />

            <TextView
                android:id="@+id/tv_repo_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@{repoData.language}"
                android:textColor="@color/white_gray"
                app:layout_constraintBottom_toBottomOf="@+id/tv_repo_name"
                app:layout_constraintStart_toEndOf="@+id/tv_repo_name"
                tools:text="@string/language"/>

            <ImageView
                android:id="@+id/iv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/ic_pencil" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_repo_language"
                app:layout_constraintStart_toStartOf="@+id/tv_repo_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_repo_name"
                app:srcCompat="@drawable/rectangle_fill_sky_15" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>